samples/_failures_safe/1761310600_93b069_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8cbc04cc.c: In function ‘main’:
./samples/SAFE/__tmp_8cbc04cc.c:152:5: error: expected expression at end of input
  152 |     while (fgets(line, sizeof(line), stdin) !=
      |     ^~~~~
./samples/SAFE/__tmp_8cbc04cc.c:152:5: error: expected declaration or statement at end of input
